--- a/.github/workflows/build-icon-from-figma.yml
+++ b/.github/workflows/build-icon-from-figma.yml
@@ -18,6 +18,10 @@ on:
         default: '[]'
         required: true
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   build_icons:
     runs-on: ubuntu-latest
@@ -48,7 +52,6 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           commit-message: 'feat(spindle-icons): update icons'
