--- a/.github/workflows/build-icon.yml
+++ b/.github/workflows/build-icon.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: '["ALL"]'
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   build_icons:
     runs-on: ubuntu-latest
@@ -38,7 +42,6 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           commit-message: 'feat(spindle-icons): update icons'
