test(spindle-ui,spindle-hooks): fix import jest-dom types

--- a/packages/spindle-hooks/tsconfig.json
+++ b/packages/spindle-hooks/tsconfig.json
@@ -8,6 +8,7 @@
     "paths": {
       "react": ["./node_modules/@types/react"]
     },
+    "types": ["node", "jest", "@testing-library/jest-dom"],
     "jsx": "react"
   },
   "include": [
