--- a/.github/workflows/lint-commit-message.yml
+++ b/.github/workflows/lint-commit-message.yml
@@ -24,7 +24,9 @@ jobs:
           node-version: 16
       - uses: actions/cache@v3
         with:
-          path: '**/node_modules'
+          path: |
+            node_modules
+            */*/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-v2
       - run: yarn install --frozen-lockfile
       - run: >
