ci: set firebase-tools version to deploy

--- a/.github/workflows/deploy-theme-switch-preview.yml
+++ b/.github/workflows/deploy-theme-switch-preview.yml
@@ -26,3 +26,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           expires: 30d
           entryPoint: ./packages/spindle-theme-switch/
+          firebaseToolsVersion: v12.9.1
