--- a/.github/workflows/deploy-highlightjs-styles.yml
+++ b/.github/workflows/deploy-highlightjs-styles.yml
@@ -27,3 +27,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           entryPoint: ./packages/spindle-syntax-themes/
           channelId: live
+          firebaseToolsVersion: v12.9.1
