--- a/.github/workflows/deploy-theme-switch.yml
+++ b/.github/workflows/deploy-theme-switch.yml
@@ -27,3 +27,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
           entryPoint: ./packages/spindle-theme-switch/
           channelId: live
+          firebaseToolsVersion: v12.9.1
