--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
   "includeMergedTags": true,
   "command": {
     "version": {
-      "message": "chore(release): publish",
+      "message": "chore: publish",
       "allowBranch": ["version/*", "release/*"]
     }
   },
