ci: name attach head step
https://github.com/reg-viz/reg-suit#workaround-for-detached-head

--- a/.github/workflows/visual-regression-test.yml
+++ b/.github/workflows/visual-regression-test.yml
@@ -77,7 +77,8 @@ jobs:
           --outDir packages/spindle-ui/.reg-suit/actual_images/
           --serverCmd 'npx serve -p 5000 packages/spindle-ui/public'
           http://localhost:5000
-      - run: git checkout ${{ github.head_ref || github.ref_name }}
+      - name: workaround for detached HEAD
+        run: git checkout ${{ github.head_ref || github.ref_name }}
       - run: |
           printf -- '%s' "$GOOGLE_APPLICATION_CREDENTIALS_JSON" | base64 --decode > "${PWD}/storage-key.json"
           export GOOGLE_APPLICATION_CREDENTIALS="${PWD}/storage-key.json"
