--- a/.github/workflows/lint-commit-message.yml
+++ b/.github/workflows/lint-commit-message.yml
@@ -31,6 +31,6 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: >
           npx commitlint
-          --from "$(git merge-base "origin/${GITHUB_BASE_REF}" "origin/${GITHUB_HEAD_REF}")"
-          --to "origin/${GITHUB_HEAD_REF}"
+          --from "${{ github.event.pull_request.base.sha }}"
+          --to "${{  github.event.pull_request.head.sha }}"
           --verbose
