--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -91,6 +91,9 @@
     "postcss-import": "^15.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "reg-keygen-git-hash-plugin": "^0.12.2",
+    "reg-notify-github-plugin": "^0.12.2",
+    "reg-publish-gcs-plugin": "^0.12.2",
     "reg-suit": "^0.12.0",
     "scaffdog": "^3.0.0",
     "stylelint": "^15.0.0",
