--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@openameba/spindle-hooks": "^1.1.0",
+    "@openameba/spindle-tokens": "^0.12.3",
     "ameba-color-palette.css": "^4.9.0",
     "react-merge-refs": "^1.1.0"
   },
