--- a/.github/workflows/build-tokens.yml
+++ b/.github/workflows/build-tokens.yml
@@ -2,6 +2,9 @@ name: build design tokens via webhook
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - feat/figma-variables
 
 permissions:
   contents: write
@@ -26,14 +29,11 @@ jobs:
       - name: Build Tokens
         env:
           FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
-          FIGMA_COLOR_PRIMITIVE_FILE_ID: ${{ secrets.FIGMA_COLOR_PRIMITIVE_FILE_ID }}
-          FIGMA_COLOR_THEME_FILE_ID: ${{ secrets.FIGMA_COLOR_THEME_FILE_ID }}
-          FIGMA_COLOR_THEME_DARK_FILE_ID: ${{ secrets.FIGMA_COLOR_THEME_DARK_FILE_ID }}
-          FIGMA_DROP_SHADOW_FILE_ID: ${{ secrets.FIGMA_DROP_SHADOW_FILE_ID }}
+          FIGMA_FILE_KEY_COLOR_VARIABLES: ${{ secrets.FIGMA_FILE_KEY_COLOR_VARIABLES }}
         run: |
-          yarn lerna run --scope @openameba/spindle-tokens export
-          # yarn lerna run --scope @openameba/spindle-tokens build
-          yarn fix
+          yarn global add tsx
+          tsx scripts/color.ts
+        working-directory: packages/spindle-tokens
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
