--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -61,6 +61,7 @@
     "react-merge-refs": "^1.1.0"
   },
   "devDependencies": {
+    "@figma/code-connect": "^1.0.3",
     "@mdx-js/react": "^1.6.22",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
