--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -84,6 +84,8 @@
     "bundlewatch": "^0.4.0",
     "cssnano": "^7.0.0",
     "dialog-polyfill": "^0.5.6",
+    "dotenv": "^16.4.5",
+    "figma-api": "^1.11.0",
     "firebase-tools": "^13.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
