--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -72,6 +72,7 @@
     "@storybook/mdx2-csf": "^1.0.0",
     "@storybook/react": "^6.5.9",
     "@svgr/cli": "^8.0.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/react-hooks": "^8.0.1",
