--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -51,20 +51,20 @@
     "@storybook/addon-webpack5-compiler-swc": "4.0.1",
     "@storybook/react": "9.1.10",
     "@storybook/react-webpack5": "9.1.10",
+    "@swc/jest": "^0.2.39",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
-    "@types/jest": "29.5.14",
-    "@types/react": "18.3.25",
-    "@types/react-dom": "19.2.0",
+    "@types/jest": "30.0.0",
+    "@types/react": "18.3.24",
+    "@types/react-dom": "19.1.9",
     "bundlewatch": "0.4.1",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "storybook": "9.1.10",
-    "ts-jest": "29.4.4",
     "webpack": "5.102.0"
   }
 }
