--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -35,16 +35,16 @@
   },
   "devDependencies": {
     "@figma/rest-api-spec": "0.34.0",
-    "@types/jest": "29.5.14",
+    "@swc/jest": "^0.2.39",
+    "@types/jest": "30.0.0",
     "@types/lodash.setwith": "4.3.9",
-    "jest": "29.7.0",
+    "jest": "30.2.0",
     "jsonabc": "2.3.1",
     "lodash.setwith": "4.3.2",
     "make-dir": "4.0.0",
     "style-dictionary": "5.1.0",
     "stylelint": "^15.10.2",
     "stylelint-config-standard": "^34.0.0",
-    "ts-jest": "29.4.4",
     "tsx": "4.20.6"
   }
 }
