--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -73,12 +73,13 @@
     "@storybook/react-webpack5": "9.1.10",
     "@svgr/cli": "8.1.0",
     "@swc/core": "1.13.5",
+    "@swc/jest": "^0.2.39",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
-    "@types/jest": "29.5.14",
     "@types/react": "18.3.25",
+    "@types/jest": "30.0.0",
     "autoprefixer": "10.4.21",
     "bundlewatch": "0.4.1",
     "cssnano": "7.1.1",
@@ -86,8 +87,8 @@
     "dotenv": "17.2.3",
     "figma-api": "1.12.0",
     "firebase-tools": "14.18.0",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
     "postcss": "8.5.6",
     "postcss-cli": "11.0.1",
     "postcss-import": "16.1.1",
@@ -104,7 +105,6 @@
     "stylelint-config-standard": "^39.0.0",
     "stylelint-order": "^7.0.0",
     "stylelint-prettier": "^5.0.0",
-    "stylelint-selector-bem-pattern": "^4.0.0",
-    "ts-jest": "29.4.4"
+    "stylelint-selector-bem-pattern": "^4.0.0"
   }
 }
