--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -73,7 +73,7 @@
     "@storybook/react-webpack5": "9.1.10",
     "@svgr/cli": "8.1.0",
     "@swc/core": "1.13.5",
-    "@swc/jest": "^0.2.39",
+    "@swc/jest": "0.2.39",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
