ci: change allow branch to main

--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
   "command": {
     "version": {
       "message": "chore: publish",
-      "allowBranch": ["version/*", "release/*"]
+      "allowBranch": ["main"]
     }
   },
   "$schema": "node_modules/lerna/schemas/lerna-schema.json"
