--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,15 @@
 name: releasing
 
 on:
-  workflow_dispatch:
-    inputs:
-      version_type:
-        description: 'Release version type'
-        required: true
-        type: choice
-        options:
-          - major
-          - minor
-          - patch
-          - premajor
-          - preminor
-          - prepatch
-          - prerelease
-      package_name:
-        description: 'Package name to release (leave empty for all packages)'
-        required: false
-        type: choice
-        options:
-          - 'all-changed'
-          - '@openameba/spindle-hooks'
-          - '@openameba/spindle-icons'
-          - '@openameba/spindle-mcp-server'
-          - '@openameba/spindle-syntax-themes'
-          - '@openameba/spindle-theme-switch'
-          - '@openameba/spindle-tokens'
-          - '@openameba/spindle-ui'
+  push:
+    branches:
+      - release/major
+      - release/minor
+      - release/patch
+      - release/premajor
+      - release/preminor
+      - release/prepatch
+      - release/prerelease
 
 jobs:
   releasing:
@@ -61,42 +43,18 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-      - name: Check lerna changed for major release
-        if: ${{ github.event.inputs.version_type == 'major' }}
+      - name: Extract branch from git ref
         run: |
-          echo "Checking lerna changed for major release..."
-          CHANGED_PACKAGES=$(npx lerna changed --json | jq -r '.[].name' | tr '\n' ' ' | sed 's/ $//')
-          echo "Changed packages: $CHANGED_PACKAGES"
-          if [ -z "$CHANGED_PACKAGES" ]; then
-            echo "No packages have changed. Major release requires changes."
-            exit 1
-          fi
-
-          # Check if the selected package exactly matches the changed packages
-          if [ "$CHANGED_PACKAGES" = "${{ github.event.inputs.package_name }}" ]; then
-            echo "Selected package ${{ github.event.inputs.package_name }} has changes. Proceeding with major release."
-          else
-            echo "Major releases are only allowed when exactly one package (the selected one) has changes. Changed packages: $CHANGED_PACKAGES. Selected package: ${{ github.event.inputs.package_name }}"
-            exit 1
-          fi
-          echo "Packages changed successfully for major release"
-      - name: releasing with lerna (specific package)
-        if: ${{ github.event.inputs.package_name != 'all-changed' }}
-        run: yarn lerna publish ${{ github.event.inputs.version_type }} --conventional-commits --create-release github --yes --no-private --scope ${{ github.event.inputs.package_name }}
-        env:
-          GH_TOKEN: ${{ github.token }}
-      - name: releasing with lerna (all packages)
-        if: ${{ github.event.inputs.package_name == 'all-changed' }}
-        run: yarn lerna publish ${{ github.event.inputs.version_type }} --conventional-commits --create-release github --yes --no-private
-        env:
-          GH_TOKEN: ${{ github.token }}
+          echo "name=${GITHUB_REF#refs/*/}" >> "$GITHUB_OUTPUT"
+          echo "version=${GITHUB_REF##*/}" >> "$GITHUB_OUTPUT"
+        id: extract_branch
+      - name: Releaseing with lerna
+        run: yarn lerna publish ${{ steps.extract_branch.outputs.version }} --conventional-commits --create-release github --yes --no-private
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
-        with:
-          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
-          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
-          commit-message: 'chore: publish ${{ github.event.inputs.version_type }} release'
-          branch: release/${{ github.event.inputs.version_type }}
-          delete-branch: true
-          title: 'chore: publish ${{ github.event.inputs.version_type }} release'
-          body: 'Automated ${{ github.event.inputs.version_type }} release via workflow dispatch'
+        run: >
+          curl
+          -X POST
+          -H "Accept: application/vnd.github.v3+json"
+          -H "Authorization: token ${{ github.token }}"
+          https://api.github.com/repos/${{ github.event.repository.owner.name }}/${{ github.event.repository.name }}/pulls
+          -d '{"head":"${{ steps.extract_branch.outputs.name }}","base":"${{ github.event.repository.default_branch }}","title":"chore: publish"}'
