chore(spindle-mcp-server): add dependencies to track package updates

--- a/packages/spindle-mcp-server/package.json
+++ b/packages/spindle-mcp-server/package.json
@@ -42,6 +42,8 @@
     "zod": "^4.1.9"
   },
   "devDependencies": {
+    "@openameba/spindle-tokens": "1.8.0",
+    "@openameba/spindle-ui": "3.0.0",
     "@types/node": "20.19.21",
     "cpx2": "8.0.0",
     "vitest": "3.2.4"
