--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "includes": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"],
+    "includes": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "**/*.css"],
     "ignoreUnknown": true
   },
   "formatter": {
@@ -70,6 +70,19 @@
           },
           "a11y": {
             "recommended": false
+          }
+        }
+      }
+    },
+    {
+      "includes": ["**/*.css"],
+      "linter": {
+        "rules": {
+          "correctness": {
+            "noUnknownMediaFeatureName": "off"
+          },
+          "style": {
+            "noDescendingSpecificity": "off"
           }
         }
       }
